# notion-clone

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  challenge.md  docker-compose.yml  opencode.json  package.json  pnpm-lock.yaml  progress.json  railway.json  skills-lock.json
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/migrations/: 0001_users_and_sessions.sql  0002_password_reset_tokens.sql  0003_workspaces.sql  0004_workspace_invites_and_roles.sql  0005_blocks_and_operations.sql  0006_workspace_page_container.sql  0007_block_prop_versions.sql  0008_avatars_and_recent_editors.sql  0009_image_blocks.sql  0010_m4_search_public_links_and_object_deletion.sql  0011_m4_search_index.sql  0012_ai_and_operation_groups.sql  0013_block_embeddings.sql  0014_block_embeddings_cosine_index.sql  0015_mcp_integration_tokens.sql  0016_mermaid_blocks.sql  0017_database_blocks.sql  0018_database_row_pages.sql  0019_normalize_ai_rich_text.sql  0020_github_app_and_pr_links.sql  0021_github_state_return_page.sql  0022_github_mcp_scopes.sql
backend/src/: lib.rs  main.rs
backend/src/adapters/: mod.rs
backend/src/adapters/ai/: mod.rs  openrouter.rs
backend/src/adapters/email/: mod.rs  noop.rs  resend.rs
backend/src/adapters/github/: mod.rs
backend/src/adapters/http/: ai_routes.rs  app_routes.rs  auth_extractor.rs  auth_routes.rs  dto.rs  error.rs  github_routes.rs  integration_routes.rs  media_routes.rs  mod.rs  page_routes.rs  workspace_routes.rs  ws_routes.rs
backend/src/application/: embeddings.rs  github.rs  integrations.rs  mod.rs  tests.rs
backend/src/bootstrap/: config.rs  health.rs  mod.rs  router.rs  server.rs  state.rs
backend/src/domain/: block.rs  error.rs  github.rs  mod.rs  workspace.rs
backend/tests/: health.rs
(+396 files in other folders)
